fixed a little overlapping of extension span in detailed calendar view

--- a/inyoka_theme_ubuntuusers/static/style/main.less
+++ b/inyoka_theme_ubuntuusers/static/style/main.less
@@ -1257,10 +1257,8 @@ div#database_debug_table ul li pre,div#database_debug_table table {
   text-align: center;
   display: block;
   background-color: #d4d4d4;
-  width: 99.5%;
-  padding: 5px;
-  padding-top: 10px;
-  margin-top: -10px;
+  padding: 10px 0;
+  margin-top: -11px;
 }
 
 .admin_link_js a, a.admin_link_js, .admin_link a, a.admin_link {
